--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -6,9 +6,12 @@
     <%else%>
       <% if current_user.friend?(user)%>
          <%= link_to 'Remove as a friend',  current_user.remove_friend(user), class: 'profile-link' %>
+      <% elsif current_user.pending_friends.include?(user) %>
+        Pending response from <%= user.name%>
       <%else%>
-        <%= link_to 'Add as a friend',  send_request_friendship_path %>
+        <%= link_to 'Add as a friend',  user_friendships_path(user), method: :post, class: 'profile-link' %>
       <%end%>
     <%end%>
+
   </span>
 </li>
