--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -7,7 +7,7 @@
       <% if current_user.friend?(user)%>
          <%= link_to 'Remove as a friend',  current_user.remove_friend(user), class: 'profile-link' %>
       <% elsif current_user.pending_friends.include?(user) %>
-        Pending response from <%= user.name%>
+        <p> Pending response from <%= user.name%> </p>
       <%else%>
         <%= link_to 'Add as a friend',  user_friendships_path(user), method: :post, class: 'profile-link' %>
       <%end%>
