Updated the user show page

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,21 @@
     <h3>Recent posts:</h3>
     <ul class="posts">
       <%= render @posts %>
+    <h3>Friend's list</h3>
+    <%= @friends.each { |frd| 
+       frd.name 
+      } %>
+      <h3>Pending friend's list</h3>
+      <%= @friend_req.each { |frd_req|
+       frd_req.name 
+       } %>
+      <h3>Friend's request list</h3>
+      <% @friend_pen.each do |friend_pen|%>
+        <%= frd_pen.name%>
+        <%= link_to 'Decline', friendship_path(frd_pen),method: :delete%>
+        <%= link_to 'Approve',  user_approve_friendship_path(frd_pen)%>
+      <% end %>
+       
     </ul>
   </article>
 </section>
