--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -5,7 +5,7 @@
     <% if current_user.id == user.id%>
     <%else%>
       <% if current_user.friend?(user)%>
-         <%= link_to 'Remove as a friend',  current_user.remove_friend(user), class: 'profile-link' %>
+         <%= link_to 'Remove as a friend', user_approve_friendships_path(user),method: :delete %>
       <% elsif current_user.pending_friends.include?(user) %>
         <p> Pending response from <%= user.name%> </p>
       <%else%>
