--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,17 @@
 <section class="user-section">
   <h2><%= "Name: #{@user.name}" %></h2>
+  <% if current_user.friend?(@user)%>
+      <%= link_to 'Remove as a friend', user_approve_friendships_path(@user),method: :delete %>
+  <% elsif current_user.pending_friends.include?(@user) %>
+    <p> Pending response from <%= @user.name%> </p>
+  <%else%>
+    <%= link_to 'Add as a friend',  user_friendships_path(@user), method: :post, class: 'profile-link' %>
+  <%end%>
   <article class="timeline">
     <h3>Recent posts:</h3>
     <ul class="posts">
       <%= render @posts %>
+      
     <h3>Friend's list</h3>
     <% @friends.each { |frd| %>
        <%= frd.name %>
