--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <section class="user-section">
   <h2><%= "Name: #{@user.name}" %></h2>
   <% if current_user.friend?(@user)%>
-      <%= link_to 'Remove as a friend', user_approve_friendships_path(@user),method: :delete %>
+      <%= link_to 'Remove as a friend', friendship_path(user),method: :delete %>
   <% elsif current_user.pending_friends.include?(@user) %>
     <p> Pending response from <%= @user.name%> </p>
   <%else%>
