Fix image for linkedIn

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>RorSocialScaffold</title>
-    <meta property="og:image" content="../assets/images/another-screenshot.JPG">
+    <meta property="og:image" content="https://i.postimg.cc/8FR4s4Pd/another-screenshot.jpg">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
